<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_detailsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#FFFFFF"
    tools:context=".DetailsActivity">

    <TextView
        android:id="@+id/textView_NombreRestaurante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="TextView"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2_DireccionRestaurante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_NombreRestaurante" />

    <Button
        android:id="@+id/button3_IniciarVista"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/iniciar_vista"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2_DireccionRestaurante" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="210dp"
        android:background="#737272"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3_IniciarVista">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView3_InfoAd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/InfoAd"
        android:layout_margin="20dp"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <ImageView
        android:id="@+id/imageView2_clock"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3_InfoAd"
        app:srcCompat="@drawable/ic_clock" />

    <TextView
        android:id="@+id/textView4_HorarioAtencion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/HorarioAt"
        app:layout_constraintStart_toEndOf="@+id/imageView2_clock"
        app:layout_constraintTop_toBottomOf="@+id/textView3_InfoAd" />

    <TextView
        android:id="@+id/textView5_Horario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/imageView2_clock"
        app:layout_constraintTop_toBottomOf="@+id/textView4_HorarioAtencion" />

    <ImageView
        android:id="@+id/imageView3_tel"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2_clock"
        app:srcCompat="@drawable/ic_baseline_call_24" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/tel"
        app:layout_constraintStart_toEndOf="@+id/imageView3_tel"
        app:layout_constraintTop_toBottomOf="@+id/textView5_Horario" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="2231-7373"
        app:layout_constraintStart_toEndOf="@+id/imageView3_tel"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/button4_llamar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:layout_margin="20dp"
        android:text="@string/llamar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5_Horario"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>


</androidx.constraintlayout.widget.ConstraintLayout>